--- a/unit13/unit13.2/index.css
+++ b/unit13/unit13.2/index.css
@@ -5,8 +5,12 @@
 }
 #bgimg{
 	width: 100%;
+	padding-top: 50px;
 	height: 100vh;
 	position: relative;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-image: url('img13.2/hinh-nen-background-dep-45.jpg');
 }
 img{
 	width: 100%;
@@ -16,18 +20,15 @@ img{
 	height: 100%;
 }
 #contain{
-	position: absolute;
 	width: 60%;
 	margin-left: 20%;
+	padding: 	20px;
 	border: 3px solid white;
-	margin-top: 10%;
-	height: 50%;
 	border-radius: 10px;
 }
 #btn{
-	position: absolute;
-	bottom: 23%;
-	left: 30%;
+	text-align: center;
+	margin-top: 20px;	
 }
 .selection{
 	background-color: #027ad9;
